Making db-locking re-entrable